got map to load still work to do to function

--- a/star-search/package.json
+++ b/star-search/package.json
@@ -5,9 +5,11 @@
   "dependencies": {
     "axios": "^0.18.0",
     "chart.js": "^2.7.3",
+    "leaflet": "^1.4.0",
     "react": "^16.8.4",
     "react-chartjs-2": "^2.7.4",
     "react-dom": "^16.8.4",
+    "react-leaflet": "^2.2.1",
     "react-scripts": "2.1.8"
   },
   "scripts": {
